<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">Beldex</string>
    <string name="wallet_activity_name">Wallet</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_changepw">Change Passphrase</string>
    <string name="password_weak">Continue typing &#8230;</string>
    <string name="password_fair">Meh &#8230;</string>
    <string name="password_good">C\'mon, you can do better!</string>
    <string name="password_strong">Getting there &#8230;</string>
    <string name="password_very_strong">Yeah baby, h4x0r style!</string>
    <string name="label_login_wallets">Wallets</string>
    <string name="label_credits">Credits</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_close">Close</string>
    <string name="label_wallet_advanced_details">Touch for detailed information</string>
    <string name="label_send_success">Successfully sent</string>
    <string name="label_send_done">Done</string>
    <string name="label_receive_info_gen_qr_code">Touch for QR Code</string>
    <string name="info_xmrto_enabled">Non-BDX payments enabled, tap for more info.</string>
    <string name="info_ledger_enabled">Ledger enabled, tap for more info.</string>
    <string name="info_xmrto"><![CDATA[
        <b>You entered a %1$s address.</b><br/>
        <i>You&apos;ll send BDX and the receiver will get %1$s using the <b>SideShift.ai</b> service.</i>
    ]]></string>
    <string name="info_send_xmrto_success_order_label">SideShift.ai Order</string>
    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
    <string name="info_send_xmrto_paid">Confirmation Pending</string>
    <string name="info_send_xmrto_unpaid">Payment Pending</string>
    <string name="info_send_xmrto_error">SideShift.ai Error (%1$s)</string>
    <string name="info_send_xmrto_sent">%1$s Sent!</string>
    <string name="info_send_xmrto_query">Querying &#8230;</string>
    <string name="info_send_xmrto_parms"><![CDATA[
        <b>You can send %1$s &#8212; %2$s %4$s</b>.<br/>
        <i><b>SideShift.ai</b> is giving you an exchange rate of <b>%3$s %4$s/BDX</b> <u>right now</u></i>.
    ]]></string>
    <string name="send_available_btc">%2$s %3$s (%1$s BDX)</string>
    <string name="info_paymentid_integrated">&#x2714; Payment ID integrated</string>
    <string name="info_prepare_tx">Preparing your transaction</string>
    <string name="label_send_progress_xmrto_create">Creating SideShift.ai Order</string>
    <string name="label_send_progress_xmrto_query">Querying SideShift.ai Order</string>
    <string name="label_send_progress_create_tx">Preparing Beldex Transaction</string>
    <string name="label_send_progress_queryparms">Querying SideShift.ai parameters</string>
    <string name="label_generic_xmrto_error">SideShift.ai ERROR</string>
    <string name="text_generic_xmrto_error">Code: %1$d</string>
    <string name="text_retry">Touch to retry</string>
    <string name="text_noretry_monero">Now we\'re stuck here!</string>
    <string name="text_noretry">Uh-oh, SideShift.ai does not seem be available right now!</string>
    <string name="text_send_btc_amount">%1$s %3$s = %2$s BDX</string>
    <string name="text_send_btc_rate">(Rate: %1$s %2$s/BDX)</string>
    <string name="label_send_btc_xmrto_info">Visit SideShift.ai for support &amp; tracking</string>
    <string name="label_send_btc_xmrto_key_lb">Secret Key\nSideShift.ai</string>
    <string name="label_send_btc_xmrto_key">SideShift.ai Secret Key</string>
    <string name="label_send_btc_address">Destination %1$s Address</string>
    <string name="label_send_btc_amount">Amount</string>
    <string name="label_send_txid">Transaction ID</string>
    <string name="label_send_address">Destination Address</string>
    <string name="label_send_notes">Notes</string>
    <string name="backup_progress">Backup in progress</string>
    <string name="archive_progress">Archive in progress</string>
    <string name="rename_progress">Rename in progress</string>
    <string name="changepw_progress">Change Password in progress</string>
    <string name="service_progress">Wallets are loading &#8230;\nPlease wait...</string>
    <string name="backup_success">Backup successful</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="rename_failed">Rename failed!</string>
    <string name="changepw_failed">Change Password failed!</string>
    <string name="changepw_success">Password changed</string>
    <string name="label_daemon">Node</string>
    <string name="connect_stagenet" translatable="false">Stagenet</string>
    <string name="connect_testnet" translatable="false">Testnet</string>
    <string name="status_wallet_loading">Loading Wallet &#8230;</string>
    <string name="status_wallet_unloaded">Wallet saved</string>
    <string name="status_wallet_unload_failed">Wallet save failed!</string>
    <string name="status_wallet_connecting">Connecting &#8230;</string>
    <string name="status_wallet_connect_failed">Node connection failed!\nCheck username/password</string>
    <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
    <string name="status_wallet_node_invalid">Node invalid!\nTry another.</string>
    <string name="status_wallet_connect_ioex">Cannot reach node!\nTry again or another.</string>
    <string name="status_wallet_disconnected">Disconnected</string>
    <string name="status_transaction_failed">Transaction failed: %1$s</string>
    <string name="send_xmrto_timeout">You waited too long my friend!</string>
    <string name="service_busy">I am still busy with your last wallet &#8230;</string>
    <string name="prompt_rename">Rename %1$s</string>
    <string name="prompt_changepw">New Passphrase for %1$s</string>
    <string name="prompt_changepwB">Repeat Passphrase for %1$s</string>
    <string name="prompt_password">Password for %1$s</string>
    <string name="prompt_fingerprint_auth">You can also open wallet using fingerprint.\nPlease touch sensor.</string>
    <string name="prompt_open_wallet">Opening the wallet&#8230;</string>
    <string name="bad_fingerprint">Fingerprint not recognized. Try again.</string>
    <string name="bad_password">Incorrect password!</string>
    <string name="bad_saved_password">Saved password is incorrect.\nPlease enter password manually.</string>
    <string name="bad_wallet">Wallet does not exist!</string>
    <string name="prompt_daemon_missing">Node must be set!</string>
    <string name="prompt_wrong_net">Wallet does not match selected net</string>
    <string name="label_watchonly">(Watch Only)</string>
    <string name="label_wallet_receive">Receive</string>
    <string name="label_wallet_send">Send</string>
    <string name="xmr_unconfirmed_amount">+ %1$s BDX Ledger balance</string>
    <string name="service_description">Beldex Service</string>
    <string name="status_synced">Synced:</string>
    <string name="status_remaining">Blocks remaining</string>
    <string name="status_syncing">Scanning:</string>
    <string name="message_strorage_not_writable">External Storage is not writable! Panic!</string>
    <string name="message_strorage_not_permitted">We really need those External Storage permissions!</string>
    <string name="message_camera_not_permitted">No camera = No QR scanning!</string>
    <string name="label_copy_viewkey">View Key</string>
    <string name="label_copy_spendkey" translatable="false">Spend Key</string>
    <string name="label_copy_address">Public Address</string>
    <string name="label_copy_mnemonics_seed" translatable="false">Mnemonic Seed</string>
    <string name="label_copy_xmrtokey">Key</string>
    <string name="message_copy_viewkey">View Key copied to clipboard!</string>
    <string name="message_copy_spendkey" translatable="false">Spend Key copied to clipboard!</string>
    <string name="message_copy_xmrtokey">Key copied to clipboard!</string>
    <string name="message_copy_address">Wallet Address copied to clipboard!</string>
    <string name="message_copy_mnemonics_seed" translatable="false">Mnemonic Seed copied to clipboard!</string>
    <string name="message_copy_txid">Transaction ID copied to clipboard!</string>
    <string name="message_nocopy">Copy disabled for security reasons!</string>
    <string name="message_exchange_failed">Cannot get exchange rate!\nUse BDX/BDX or try again</string>
    <string name="generate_title">Create Wallet</string>
    <string name="generate_name_hint">Wallet Name</string>
    <string name="generate_password_hint">Wallet Password</string>
    <string name="generate_fingerprint_hint">Allow to open wallet using fingerprint</string>
    <string name="generate_fingerprint_warn"><![CDATA[
        <strong>Fingerprint Authentication</strong>
        <p>With fingerprint authentication enabled, you can view wallet balance and receive funds
        without entering password.</p>
        <p>But for additional security, beldex will still require you to enter password when
        viewing wallet details or sending funds.</p>
        <strong>Security Warning</strong>
        <p>Finally, beldex wants to remind you that anyone who can get your fingerprint will be
        able to peep into your wallet balance.</p>
        <p>For instance, a malicious user around you can open your wallet when you are asleep.</p>
        <strong>Are you sure to enable this function?</strong>
    ]]></string>
    <string name="generate_bad_passwordB">Passphrases do not match</string>
    <string name="generate_empty_passwordB">Passphrase may not be empty</string>
    <string name="generate_buttonGenerate">Make me a wallet already!</string>
    <string name="generate_button_accept">I have noted the mnemonic seed</string>
    <string name="generate_wallet_name">Give me a name!</string>
    <string name="generate_wallet_exists">Wallet exists!</string>
    <string name="generate_wallet_dot">Cannot begin with .</string>
    <string name="generate_wallet_creating">Creating wallet</string>
    <string name="generate_wallet_created">Wallet created</string>
    <string name="generate_restoreheight_error">Enter Number</string>
    <string name="generate_wallet_type_key">Keys</string>
    <string name="generate_wallet_type_new">New</string>
    <string name="generate_wallet_type_seed">Seed</string>
    <string name="generate_wallet_type_view">View</string>
    <string name="generate_wallet_type_ledger" translatable="false">Ledger</string>
    <string name="generate_address_hint">Public Address</string>
    <string name="generate_viewkey_hint">View Key</string>
    <string name="generate_spendkey_hint">Spend Key</string>
    <string name="generate_mnemonic_hint">25-Word Mnemonic Seed</string>
    <string name="generate_restoreheight_hint">Restore Height or Date (YYYY-MM-DD)</string>
    <string name="generate_address_label">Public Address</string>
    <string name="generate_viewkey_label">View Key</string>
    <string name="generate_spendkey_label">Spend Key</string>
    <string name="generate_mnemonic_label">Mnemonic Seed</string>
    <string name="send_amount_label">Amount</string>
    <string name="send_fee_label">Fee</string>
    <string name="send_total_label">Total</string>
    <string name="receive_desc_hint">Description (optional)</string>
    <string name="tx_subaddress">Subaddress</string>
    <string name="receive_transition_name" translatable="false">receive_transition</string>
</resources>