<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/cardBackgroundColor"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:padding="6dp"
                    android:src="@drawable/beldex_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MoneroText.Success"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/greenColor"
                        android:text="@string/label_send_success" />

                    <TextView
                        android:id="@+id/tvTxAmount"
                        style="@style/MoneroText.Balance.Orange.Smaller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAlignment="textEnd"
                        tools:text="143.008000 BDX" />

                    <TextView
                        android:id="@+id/tvTxFee"
                        style="@style/MoneroText.Gray.SuccessFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAlignment="textEnd"
                        tools:text="+0.006817 Fee" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    style="@style/MoneroText.Confirm.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_send_txid"
                    android:textAlignment="textStart" />

                <ImageButton
                    android:id="@+id/bCopyTxId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/ic_content_copy_24dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTxId"
                style="@style/MoneroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_margin="10dp"
                android:background="@drawable/backgound_seed"
                android:textAlignment="textStart"
                tools:text="fcb12cbe9f43d4e8b9ee54f48d450a89a6937946db856506820df0539571801d" />

            <TextView
                style="@style/MoneroText.Confirm.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_send_address"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvTxAddress"
                style="@style/MoneroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="textStart"
                android:background="@drawable/backgound_seed"
                tools:text="4AdkPJoxn7JCvAby9szgnt93MSEwdnxdhaASxbTBm6x5dCwmsDep2UYN4FhStDn5i11nsJbpU7oj59ahg8gXb1Mg3viqCuk" />

    </LinearLayout>

</ScrollView>
