<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/receive_transition_name">

    <EditText
        android:id="@+id/etDummy"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pbProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cvQrCode"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:backgroundTint="#ffffffff"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:contentPadding="4dp">

                <TextView
                    android:id="@+id/tvQrCode"
                    style="@style/MoneroFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="4dp"
                    android:textColor="#000000"
                    android:text="@string/label_receive_info_gen_qr_code"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone"
                    card_view:drawableStartCompat="@drawable/ic_info_outline_gray_24dp" />

                <ImageView
                    android:id="@+id/qrCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true" />
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvSubAddress"
            style="@style/MoneroText.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/tx_subaddress"
            android:visibility="gone"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAddress"
                style="@style/MoneroText.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_weight="1"
                tools:text="9wZnnNctRc7RaLya1rxykH21dUwfQpNGmVLjAvkvqe7nKT2Mw848AJNGMunW5xjoSZ5vCCU3uDnUoVqSSHxzRtQBE3f6crx" />

            <ImageButton
                android:id="@+id/bCopyAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?android:selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/ic_content_copy_24dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardBackgroundColor"
                android:orientation="vertical">
                <com.m2049r.xmrwallet.widget.ExchangeView
                    android:id="@+id/evAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etNotes"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColorHint="@color/textColor"
                    app:boxStrokeErrorColor="@color/textColor"
                    app:errorEnabled="true"
                    app:errorIconTint="@color/textColor"
                    app:errorTextColor="@color/redColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardBackgroundColor"
                        android:hint="@string/receive_desc_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:paddingStart="0dp"
                        android:textAlignment="textStart"
                        android:textColorHint="@color/textColor" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/tvPrimaryAccount"
                    style="@style/MoneroText.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:background="@drawable/primary_button"
                    tools:text="TAG"
                    android:padding="10dp"
                    android:elevation="10dp"
                    android:visibility="gone"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <ImageView
        android:id="@+id/qrCodeFull"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="#dd000000"
        android:visibility="gone" />
</FrameLayout>